--- a/.github/workflows/plots_update_cronjob.yml
+++ b/.github/workflows/plots_update_cronjob.yml
@@ -3,7 +3,7 @@ name: Automated job
 on:
   push:
     branches:
-      - 'test_cronjob'
+      - 'laurie-test-cronjob'
 #  schedule:
 #    - cron:  '5 4 * * *'
 
