--- a/.github/workflows/cta_data_downloads.yml
+++ b/.github/workflows/cta_data_downloads.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
     - 'automate-schedule-downloads'
+    - 'date-range-downloads'
 
   schedule:
     # Run every day at 12:30pm CST which is 5:30pm UTC
