--- a/.github/workflows/cta_data_downloads.yml
+++ b/.github/workflows/cta_data_downloads.yml
@@ -46,10 +46,13 @@ jobs:
           python-version: ${{ env.PYTHON_VERSION }}
       
       - name: 'Save schedule summaries'
+      # Test with no date and with date range
         run: |
           pip install -r requirements.txt
           python -c 'from scrape_data.cta_data_downloads import save_sched_daily_summary; \
            save_sched_daily_summary()' $AWS_ACCESS_KEY_ID $AWS_SECRET_ACCESS_KEY
+          python -c 'from scrape_data.cta_data_downloads import save_sched_daily_summary; \
+           save_sched_daily_summary(["2023-05-02", "2023-08-02"])' $AWS_ACCESS_KEY_ID $AWS_SECRET_ACCESS_KEY
     
       
   save-realtime-daily-summary:
