--- a/.github/workflows/cta_data_downloads.yml
+++ b/.github/workflows/cta_data_downloads.yml
@@ -5,6 +5,7 @@ on:
     branches:
     - 'automate-schedule-downloads'
     - 'date-range-downloads'
+    - 'compare-realtime-schedule'
 
   schedule:
     # Run every day at 12:30pm CST which is 5:30pm UTC
@@ -73,4 +74,23 @@ jobs:
           
           python -c 'from scrape_data.cta_data_downloads import save_realtime_daily_summary; \
            save_realtime_daily_summary()' $AWS_ACCESS_KEY_ID $AWS_SECRET_ACCESS_KEY
-    
+  
+  
+  save-frontend-map-json:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+      
+      - name: 'Save data.json for frontend'
+
+        run: |
+          pip install -r requirements.txt
+          
+          python -c 'from scrape_data.cta_data_downloads import compare_realtime_sched; \
+           compare_realtime_sched()' $AWS_ACCESS_KEY_ID $AWS_SECRET_ACCESS_KEY
+  
