Turn of fail-fast

--- a/.github/workflows/cta_data_downloads.yml
+++ b/.github/workflows/cta_data_downloads.yml
@@ -79,6 +79,8 @@ jobs:
   save-frontend-map-json:
     runs-on: ubuntu-latest
     needs: [save-realtime-daily-summary, save-schedule-daily-summary]
+    strategy:
+      fail-fast: false
     steps:
       - uses: actions/checkout@v3
 
