--- a/.github/workflows/cta_data_downloads.yml
+++ b/.github/workflows/cta_data_downloads.yml
@@ -49,7 +49,7 @@ jobs:
 
         run: |
           pip install -r requirements.txt
-          python -c 'from scrape_data.cta_data_downloads import save_transitfeeds_zip(); \
+          python -c 'from scrape_data.cta_data_downloads import save_transitfeeds_zip; \
           save_transitfeeds_zip()' \
           $AWS_ACCESS_KEY_ID $AWS_SECRET_ACCESS_KEY
         
