--- a/.github/workflows/cta_data_downloads.yml
+++ b/.github/workflows/cta_data_downloads.yml
@@ -1,6 +1,7 @@
 name: Automate CTA schedule and realtime downloads
 
 on:
+  workflow_dispatch:
   push:
     branches:
     - 'automate-schedule-downloads'
