--- a/.github/workflows/plots_update_cronjob.yml
+++ b/.github/workflows/plots_update_cronjob.yml
@@ -3,7 +3,7 @@ name: Automated job
 on:
   push:
     branches:
-      - 'test_cronjob'
+      - 'test_gh_action_commit'
 #  schedule:
 #    - cron:  '5 4 * * *'
 
@@ -18,11 +18,10 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Run a one-line script
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: |
-          touch test_file.txt
-          pip install boto3
-          python test_script.py $AWS_ACCESS_KEY_ID $AWS_SECRET_ACCESS_KEY
+      - uses: oleksiyrudenko/gha-git-credentials@v2-latest
+        with:
+          token: '${{ secrets.GITHUB_TOKEN }}'
+      - run: |
+          touch new_file.txt
+          git add .
+          git commit -m 'Add test file'
