--- a/.github/workflows/ridership-action.yml
+++ b/.github/workflows/ridership-action.yml
@@ -2,12 +2,10 @@ name: Automate ridership data updates
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - ridership-gh-action
+  
   schedule:
-    # Run every day at 12:30pm CST which is 5:30pm UTC
-    - cron: 30 17 * * * 
+    # Run monthly at 12:30pm CST which is 5:30pm UTC
+    - cron: 30 17 1 * * 
 
 env: 
   PYTHON_VERSION: 3.10.6
