--- a/.github/workflows/test-macos-sonoma.yml
+++ b/.github/workflows/test-macos-sonoma.yml
@@ -6,9 +6,7 @@ on:
         - test-macos-sonoma
   
 env: 
-  PYTHON_VERSION: 3.12.0
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  PYTHON_VERSION: 3.12
 
 jobs:
   install-requirements:
@@ -24,4 +22,7 @@ jobs:
       - name: install-requirements
 
         run: |
+          python -m venv .venv
+          source .venv/bin/activate
+          python -V
           pip install -r requirements.txt
