--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ tqdm==4.64.0
 autopep8==1.7.0
 python-dotenv==0.20.0
 seaborn==0.12.0
-PyQt5==5.15.7
+PyQt5>=5.15.7
 folium==0.12.1.post1
 mapclassify>=2.4.2+55.g0155c6e
 plotly==5.11.0
