--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,12 @@
 -r scrape_data/requirements.txt
 flake8==5.0.4
 black==22.6.0
-s3path==0.3.4
+s3path==0.4.2
 tqdm==4.64.0
 autopep8==1.7.0
 python-dotenv==0.20.0
 seaborn==0.12.0
-PyQt5==5.15.7
+PyQt5>=5.15.7
 folium==0.12.1.post1
 mapclassify>=2.4.2+55.g0155c6e
 plotly==5.11.0
