--- a/.github/workflows/cta_data_downloads.yml
+++ b/.github/workflows/cta_data_downloads.yml
@@ -1,10 +1,9 @@
 name: Automate CTA schedule and realtime downloads
 
 on:
-
-  schedule:
-    # Run every day at 12:30pm CST which is 5:30pm UTC
-    - cron: 30 17 * * * 
+  push:
+    branches:
+      - fix_numpy_version
 
 env: 
   PYTHON_VERSION: 3.10.6
