--- a/.github/workflows/cta_data_downloads.yml
+++ b/.github/workflows/cta_data_downloads.yml
@@ -5,6 +5,7 @@ on:
   schedule:
     # Run every day at 12:30pm CST which is 5:30pm UTC
     - cron: 30 17 * * * 
+  workflow_dispatch:
 
 env: 
   PYTHON_VERSION: 3.10.6
